# should-i-swim

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  requirements.txt
.github/workflows/: lint.yml  qa.yml
backend/: pyproject.toml  requirements-dev.txt  requirements.txt
backend/answers/: enums.py  models.py  serializers.py  tests.py  utils.py  views.py
backend/answers/migrations/: 0001_initial.py  0002_auto_20231030_1053.py  0002_auto_20231122_1501.py
backend/answers/tests/: factories.py  test_models.py  test_views.py
backend/core/management/commands/: runapscheduler.py
backend/pools/: jobs.py  mocks.py  models.py  providers.py  serializers.py  tests.py  utils.py  views.py
backend/pools/migrations/: 0001_initial.py  0002_auto_20231031_1647.py
backend/pools/tests/: factories.py  test_utils.py  test_views.py
backend/starter/: settings.py  urls.py
frontend/: .eslintrc.cjs  index.html  package.json  tailwind.config.js
frontend/src/: App.vue
frontend/src/classes/: Answer.ts  Pool.ts
frontend/src/components/: GetAnswer.vue  HelloWorld.vue  PoolDetail.vue  PoolList.vue
frontend/src/enums/: Answer.ts
frontend/src/interfaces/: ApiAnswer.ts  ApiPool.ts  pool.ts
